# Yeti2020

./: mammoth.repos
mammoth_description/urdf/: mammoth.proto
mammoth_gazebo/: package.xml
mammoth_gazebo/config/: slam_online_async.yaml
mammoth_gazebo/launch/: mammoth.launch.py
mammoth_util/: CMakeLists.txt  package.xml
mammoth_util/config/costmaps/: costmap.pgm
mammoth_util/include/: costmap_loader.hpp
mammoth_util/launch/: costmap_loader.launch.py
mammoth_util/src/: costmap_loader.cpp
mammoth_webots/: CMakeLists.txt  package.xml
mammoth_webots/launch/: mammoth.launch.py
